--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,18 +1,3 @@
-// @font-face {
-//     font-family: 'open_sansregular';
-//     src: url('fonts/open_sans_regular/opensans-regular-webfont.eot');
-//     src: url('fonts/open_sans_regular/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-//          url('fonts/open_sans_regular/opensans-regular-webfont.woff2') format('woff2'),
-//          url('fonts/open_sans_regular/opensans-regular-webfont.woff') format('woff'),
-//          url('fonts/open_sans_regular/opensans-regular-webfont.ttf') format('truetype'),
-//          url('fonts/open_sans_regular/opensans-regular-webfont.svg#open_sansregular') format('svg');
-//     font-weight: normal;
-//     font-style: normal;
-
-// }
-
-
-
 @font-face {
     font-family: 'source_sans_prosemibold';
     src: url('fonts/source_sans_pro/sourcesanspro-semibold-webfont.eot');
@@ -66,6 +51,19 @@
          url('fonts/source_sans_pro/sourcesanspro-bold-webfont.woff') format('woff'),
          url('fonts/source_sans_pro/sourcesanspro-bold-webfont.ttf') format('truetype'),
          url('fonts/source_sans_pro/sourcesanspro-bold-webfont.svg#source_sans_probold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'shadows_into_lightregular';
+    src: url('fonts/shadows_into_light/shadowsintolight-webfont.eot');
+    src: url('fonts/shadows_into_light/shadowsintolight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/shadows_into_light/shadowsintolight-webfont.woff2') format('woff2'),
+         url('fonts/shadows_into_light/shadowsintolight-webfont.woff') format('woff'),
+         url('fonts/shadows_into_light/shadowsintolight-webfont.ttf') format('truetype'),
+         url('fonts/shadows_into_light/shadowsintolight-webfont.svg#shadows_into_lightregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
