--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,10 +1,10 @@
-.contact-wrap {
+.contact-form-wrap {
     padding: 60px 0;
     background: #383b3d;
     background: #252525;
 }
 
-.contact-wrap .contact-wrap--title {
+.contact-form-wrap .contact-form-wrap--title {
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 30px;
@@ -13,7 +13,7 @@
     font-family: 'source_sans_probold';
 }
 
-.contact-wrap .form-wrap {
+.contact-form-wrap .form-wrap {
     padding: 0 15px;
     max-width: 800px;
     margin: 0 auto;
