--- a/style.css
+++ b/style.css
@@ -8907,7 +8907,17 @@ header {
 
 #logo {
   float: left;
-  margin-top: 15px; }
+  margin-top: 15px;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  transition: 0.3s; }
+  #logo img {
+    width: 100%;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    transition: 0.3s; }
 
 #main-nav {
   position: fixed;
@@ -8916,8 +8926,11 @@ header {
   width: 100%;
   z-index: 999;
   background: #fff;
-  min-height: 50px;
-  box-shadow: 0 3px 6px 3px rgba(0, 0, 0, 0.06); }
+  box-shadow: 0 3px 6px 3px rgba(0, 0, 0, 0.06);
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  transition: 0.3s; }
   #main-nav ul {
     float: right; }
     #main-nav ul li {
@@ -8938,6 +8951,13 @@ header {
         color: #00b4d9; }
     #main-nav ul li.active a {
       color: #00b4d9; }
+
+#main-nav.small ul li a {
+  padding: 10px 15px; }
+#main-nav.small #logo {
+  margin-top: 5px; }
+  #main-nav.small #logo img {
+    width: 70%; }
 
 .social-icons-wrap {
   text-align: center; }
