--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -1,14 +1,15 @@
 .skills-sec {
-    background: #252525;
+    background: #fff;
     padding: 60px 0;
 
     .skills-title {
         text-align: center;
         letter-spacing: 1px;
-        color: #fff;
+        color: #252525;
         font-size: 38px;
         font-family: 'source_sans_probold';
-        margin-bottom: 30px;
+        margin-bottom: 48px;
+
     }
 
     .skills-list {
