--- a/scss/header.scss
+++ b/scss/header.scss
@@ -54,7 +54,7 @@ header {
             outline: none;
             padding: 0 40px;
             color: #fff;
-            background: #00b4d9;
+            background: $primary-color;
             transition: 0.3s;
             border-radius: 4px;
             text-transform: uppercase;
@@ -89,10 +89,29 @@ header {
     margin-top: 15px;
     @include transition(0.3s);
 
-    img {
-        width: 100%;
+    a {
+        display: block;
+        position: relative;
+        text-decoration: none;
+
+        img {
+            position: absolute;
+            width: 100%;
+            max-width: 28px;
+            @include transition(0.3s);
+        }
+
+    }
+
+    .logo--initials {
+        color: $primary-color;
+        margin-left: 40px;
+        font-size: 28px;
+        transform: translateY(10%);
+        font-family: 'shadows_into_lightregular';
         @include transition(0.3s);
     }
+    
 }
 
 #main-nav {
@@ -128,14 +147,14 @@ header {
 
             &:hover {
                 a {
-                    color: #00b4d9;
+                    color: $primary-color;
                 }
             }
         }
 
         li.active {
             a {
-                color: #00b4d9;
+                color: $primary-color;
             }
         }
     }
@@ -154,7 +173,13 @@ header {
         margin-top: 5px;
     
         img {
-            width: 70%;
+            max-width: 20px;
+        }
+
+        .logo--initials {
+            margin-left: 31px;
+            font-size: 22px;
+            transform: translateY(10%);
         }
     }
 }
@@ -214,7 +239,7 @@ header {
     right: 17px;
     width: 40px;
     height: 40px;
-    background: #00b4d9;
+    background: $primary-color;
     border-radius: 2px;
     cursor: pointer;
     text-align: center;
