--- a/style.css
+++ b/style.css
@@ -9167,14 +9167,21 @@ header {
 
 .skills-sec {
   background: #fff;
-  padding: 60px 0; }
-  .skills-sec .skills-title {
+  padding: 80px 0 100px; }
+  .skills-sec .skills-sec--title {
     text-align: center;
     letter-spacing: 1px;
     color: #252525;
     font-size: 38px;
     font-family: 'source_sans_probold';
     margin-bottom: 48px; }
+  .skills-sec .skills-title {
+    text-align: center;
+    letter-spacing: 1px;
+    color: #252525;
+    font-size: 18px;
+    font-family: 'source_sans_probold';
+    margin-bottom: 30px; }
   .skills-sec .skills-list {
     padding: 0;
     margin: 0;
@@ -9184,16 +9191,29 @@ header {
     margin: 0 auto; }
     .skills-sec .skills-list li {
       display: inline-block;
-      color: #fff;
-      font-size: 20px;
-      margin: 0 15px 10px;
-      min-height: 64px;
-      min-width: 64px;
-      position: relative; }
+      width: 200px;
+      height: 40px;
+      line-height: 44px;
+      position: relative;
+      background: #f0f0f0;
+      border-radius: 50px;
+      text-align: left;
+      padding-left: 80px;
+      margin-bottom: 15px;
+      font-family: 'source_sans_proregular';
+      -webkit-transition: 0.3s;
+      -moz-transition: 0.3s;
+      -ms-transition: 0.3s;
+      transition: 0.3s; }
       .skills-sec .skills-list li img {
         position: absolute;
-        top: 0;
-        left: 0; }
+        top: 50%;
+        left: 50px;
+        width: 20px;
+        height: 20px;
+        transform: translateY(-50%); }
+      .skills-sec .skills-list li:hover {
+        color: #00b4d9; }
 
 .contact-form-wrap {
   padding: 60px 0;
