Parallax effect, Skills

--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,7 +1,6 @@
 .contact-form-wrap {
     padding: 60px 0;
-    background: #383b3d;
-    background: #252525;
+    position: relative;
 }
 
 .contact-form-wrap .contact-form-wrap--title {
@@ -10,7 +9,7 @@
     margin-bottom: 30px;
     color: #fff;
     font-size: 38px;
-    font-family: 'source_sans_probold';
+    font-family: 'source_sans_prosemibold';
 }
 
 .contact-form-wrap .form-wrap {
