--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -30,25 +30,32 @@
 
         li {
             display: inline-block;
-            width: 200px;
-            height: 40px;
-            line-height: 44px;
-            position: relative;
-            background: #f0f0f0;
-            border-radius: 50px;
-            text-align: left;
-            padding-left: 80px;
-            margin-bottom: 15px;
-            font-family: 'source_sans_proregular';
+            margin: 10px;
+            // width: 200px;
+            // height: 40px;
+            // line-height: 44px;
+            // position: relative;
+            // background: #f0f0f0;
+            // border-radius: 50px;
+            // text-align: left;
+            // padding-left: 80px;
+            // margin-bottom: 15px;
+            // font-family: 'source_sans_proregular';
             @include transition(0.3s);
 
             img {
-                position: absolute;
-                top: 50%;
-                left: 50px;
-                width: 20px;
-                height: 20px;
-                transform: translateY(-50%);
+                display: block;
+                // top: 50%;
+                // left: 50px;
+                height: 64px;
+                width: auto;
+                @include gray-filter(100%);
+                @include transition(0.3s);
+                // transform: translateY(-50%);
+
+                &:hover {
+                    @include gray-filter(0%);
+                }
             }
 
             &:hover {
