--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,16 @@ Tags: portfolio
     clear: both;
 }
 
+.overlay-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.83);
+    z-index: 0;
+}
+
 .animation-element {
     position: relative;
 }
