History, Footer, Portfolio section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,8 +14,10 @@ Tags: portfolio
 @import 'about';
 @import 'services';
 @import 'history';
+@import 'portfolio';
 @import 'skills';
 @import 'form';
+@import 'footer';
 
 
 .container-fluid {
