--- a/style.css
+++ b/style.css
@@ -9155,6 +9155,17 @@ header {
         border-radius: 100px;
         border: 2px solid #00b4d9; }
 
+#portfolio-sec {
+  background: #f0f0f0;
+  padding: 60px 0; }
+  #portfolio-sec .portfolio-sec--title {
+    text-align: center;
+    letter-spacing: 1px;
+    color: #252525;
+    font-size: 38px;
+    font-family: 'source_sans_probold';
+    margin-bottom: 48px; }
+
 .skills-sec {
   background: #fff;
   padding: 80px 0 100px; }
@@ -9265,6 +9276,16 @@ header {
   font-family: 'source_sans_proregular';
   font-size: 14px;
   margin-bottom: 15px; }
+
+footer {
+  padding: 60px;
+  background: #1C1C20; }
+  footer p {
+    color: #fff;
+    text-align: center;
+    margin-top: 30px;
+    font-family: 'source_sans_proregular';
+    font-size: 16px; }
 
 .container-fluid {
   max-width: 1140px;
