UI Dialogs, contact form updates

--- a/scss/form.scss
+++ b/scss/form.scss
@@ -59,6 +59,16 @@
     cursor: pointer;
     font-family: 'source_sans_proregular';  
     font-size: 14px;
+    @include transition(0.3s);
+
+    &:hover {
+        background: #008ba8;
+    }
+}
+
+#contact-form .submit-btn[disabled] {
+    background: #9e9e9e;
+    cursor: wait;
 }
 
 #contact-form p[class^='error-text'] {
