--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,80 +1,99 @@
 .contact-form-wrap {
     padding: 60px 0;
     position: relative;
-}
 
-.contact-form-wrap .contact-form-wrap--title {
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-    color: #fff;
-    font-size: 38px;
-    font-family: 'source_sans_prosemibold';
-}
+    .contact-form-wrap--title {
+        text-align: center;
+        text-transform: uppercase;
+        margin-bottom: 30px;
+        color: #fff;
+        font-size: 38px;
+        font-family: 'source_sans_prosemibold';
+    }
 
-.contact-form-wrap .form-wrap {
-    padding: 0 15px;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-#contact-form .field-text {
-    display: block;
-    margin: 0 auto 10px;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid #fff;
-    outline: none;
-    padding: 10px;
-    font-family: 'source_sans_proregular';  
-    font-size: 14px;
-    color: #666;    
-}
-
-#contact-form .field-area {
-    display: block;
-    margin: 0 auto 10px;
-    width: 100%;
-    height: 200px;
-    box-sizing: border-box;
-    border: 1px solid #fff;
-    outline: none;
-    padding: 10px;
-    font-family: 'source_sans_proregular';  
-    font-size: 14px;
-    color: #666;
-    resize: none;
-    line-height: 18px;
-}
-
-#contact-form .submit-btn {
-    display: block;
-    margin: 20px auto 0;
-    padding: 15px 35px;
-    background: $primary-color;
-    border-radius: 6px;
-    color: #fff;
-    text-transform: uppercase;
-    border: none;
-    cursor: pointer;
-    font-family: 'source_sans_proregular';  
-    font-size: 14px;
-    @include transition(0.3s);
-
-    &:hover {
-        background: #008ba8;
+    .form-wrap {
+        padding: 0 15px;
+        max-width: 800px;
+        margin: 0 auto;
     }
 }
 
-#contact-form .submit-btn[disabled] {
-    background: #9e9e9e;
-    cursor: wait;
+#contact-form {
+
+    .field-text {
+        display: block;
+        margin: 0 auto 10px;
+        width: 100%;
+        box-sizing: border-box;
+        border: 2px solid #fff;
+        outline: none;
+        padding: 10px;
+        font-family: 'source_sans_proregular';  
+        font-size: 14px;
+        color: #666;    
+    }
+
+    .field-area {
+        display: block;
+        margin: 0 auto 10px;
+        width: 100%;
+        height: 200px;
+        box-sizing: border-box;
+        border: 2px solid #fff;
+        outline: none;
+        padding: 10px;
+        font-family: 'source_sans_proregular';  
+        font-size: 14px;
+        color: #666;
+        resize: none;
+        line-height: 18px;
+    }
+
+    .submit-btn {
+        display: block;
+        margin: 20px auto 0;
+        padding: 15px 35px;
+        background: $primary-color;
+        border-radius: 6px;
+        color: #fff;
+        text-transform: uppercase;
+        border: none;
+        cursor: pointer;
+        font-family: 'source_sans_proregular';  
+        font-size: 14px;
+        @include transition(0.3s);
+    
+        &:hover {
+            background: #008ba8;
+        }
+    }
+
+    .submit-btn[disabled] {
+        background: #9e9e9e;
+        cursor: wait;
+    }
+
+    .input-frame {
+        position: relative;
+
+        .error-input {
+            border: 2px solid #ef0000;
+        }
+    
+        p[class^='error-text'] {
+            color: #fff;
+            background: #ef0000;
+            border-radius: 3px;
+            display: none;
+            font-family: 'source_sans_proregular';  
+            font-size: 14px;
+            position: absolute;
+            top: 12px;
+            right: 10px;
+            height: 22px;
+            padding: 0 3px;
+            line-height: 24px;
+        }
+    }
 }
 
-#contact-form p[class^='error-text'] {
-    color: red;
-    display: none;
-    font-family: 'source_sans_proregular';  
-    font-size: 14px;
-    margin-bottom: 15px;
-}
