--- a/scss/services.scss
+++ b/scss/services.scss
@@ -58,4 +58,23 @@
             @include box-shadow(0, 0, 25px, 1px);
         }
     }
+
+    .frame {
+        @media only screen and (min-width: 769px) and (max-width: 991px) {
+
+            padding-bottom: 20px;
+
+            &:nth-child(3), &:nth-child(4) {
+                padding-bottom: 0;
+            }
+        }
+
+        @media only screen and (max-width: 768px) {
+            padding-bottom: 20px;
+
+            &:last-child {
+                padding-bottom: 0;
+            }
+        }
+    }
 }
