--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -2,6 +2,16 @@
     background: #fff;
     padding: 80px 0 100px;
 
+    .category-wrap {
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 50px;
+
+        @media only screen and (min-width: 992px) {
+            margin-bottom: 0;        
+        }
+    }
+
     .skills-sec--title {
         text-align: center;
         letter-spacing: 1px;
@@ -17,7 +27,7 @@
         color: #252525;
         font-size: 18px;
         font-family: 'source_sans_probold';
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
 
     .skills-list {
